@@ -10,7 +10,8 @@ $TYPO3_CONF_VARS['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['clearAllCache_a
 // Must use '&" with tcemain hook!!! Important for proper work of the hook.
 $TYPO3_CONF_VARS['SC_OPTIONS']['t3lib/class.t3lib_tcemain.php']['processDatamapClass']['tx_realurl'] = 'EXT:realurl/class.tx_realurl_tcemain.php:&tx_realurl_tcemain';
 
-$TYPO3_CONF_VARS['FE']['addRootLineFields'].= ',tx_realurl_pathsegment,tx_realurl_exclude';
+$TYPO3_CONF_VARS['FE']['addRootLineFields'] .= ',tx_realurl_pathsegment,tx_realurl_exclude';
+$TYPO3_CONF_VARS['FE']['﻿pageOverlayFields'] .= ',tx_realurl_pathsegment';
 
 // Include configuration file
 $_realurl_conf = @unserialize($_EXTCONF);
@@ -29,6 +30,6 @@ if (!isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['realurl'])) {
 unset($_realurl_conf);
 
 define('TX_REALURL_SEGTITLEFIELDLIST_DEFAULT', 'tx_realurl_pathsegment,alias,nav_title,title');
-define('TX_REALURL_SEGTITLEFIELDLIST_PLO', 'nav_title,title');
+define('TX_REALURL_SEGTITLEFIELDLIST_PLO', 'tx_realurl_pathsegment,nav_title,title');
 
 ?>
