@@ -2,13 +2,13 @@
 if (!defined ('TYPO3_MODE')) 	die ('Access denied.');
 
 if (TYPO3_MODE=='BE')	{
-	t3lib_extMgm::addModule('tools','txrealurlM1','',t3lib_extMgm::extPath($_EXTKEY).'mod1/');
+//	t3lib_extMgm::addModule('tools','txrealurlM1','',t3lib_extMgm::extPath($_EXTKEY).'mod1/');
 
 	// Add Web>Info module:
 	t3lib_extMgm::insertModuleFunction(
 		'web_info',
 		'tx_realurl_modfunc1',
-		t3lib_extMgm::extPath($_EXTKEY).'modfunc1/class.tx_realurl_modfunc1.php',
+		t3lib_extMgm::extPath($_EXTKEY) . 'modfunc1/class.tx_realurl_modfunc1.php',
 		'LLL:EXT:realurl/locallang_db.xml:moduleFunction.tx_realurl_modfunc1',
 		'function',
 		'online'
@@ -22,8 +22,8 @@ $TCA['pages']['columns'] += array(
 		'exclude' => 1,
 		'config' => array (
 			'type' => 'input',
-			'size' => '30',
-			'max' => '30',
+			'max' => 60,
+			'eval' => 'trim,nospace,lower'
 			//'eval' => 'uniqueInPid'	// DON'T use this anyway, it is very confusing when a path is automatically set!
 		),
 	),
@@ -40,5 +40,19 @@ $TCA['pages']['columns'] += array(
 );
 
 t3lib_extMgm::addToAllTCAtypes('pages', 'tx_realurl_pathsegment,tx_realurl_exclude', t3lib_div::compat_version('4.2') ? '1' : '2', 'after:nav_title');
+
+$TCA['pages_language_overlay']['columns'] += array(
+	'tx_realurl_pathsegment' => array(
+		'label' => 'LLL:EXT:realurl/locallang_db.xml:pages.tx_realurl_pathsegment',
+		'exclude' => 1,
+		'config' => array (
+			'type' => 'input',
+			'max' => 60,
+			'eval' => 'trim,nospace,lower'
+		),
+	),
+);
+
+t3lib_extMgm::addToAllTCAtypes('pages_language_overlay', 'tx_realurl_pathsegment', t3lib_div::compat_version('4.2') ? '1' : '2', 'after:nav_title');
 
 ?>
